--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.5.0",
+    "styled-components": "^6.1.17",
     "tailwindcss": "^4.1.3"
   },
   "devDependencies": {
