--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "react-icons": "^5.5.0",
     "react-paginate": "^8.3.0",
     "react-router-dom": "^7.5.0",
+    "react-select": "^5.10.1",
     "styled-components": "^6.1.17",
     "tailwindcss": "^4.1.3"
   },
