--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,8 @@
     "react-paginate": "^8.3.0",
     "react-router-dom": "^7.5.0",
     "react-select": "^5.10.1",
+    "react-slick": "^0.30.3",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.17",
     "tailwindcss": "^4.1.3"
   },
